<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFE4E8"
    android:orientation="vertical"
    tools:context=".dog.ViewDog">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                android:id="@+id/imageView"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                tools:srcCompat="@tools:sample/avatars" />

             <TextView
                android:id="@+id/nombrepet_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/bebas"
                android:hint="@string/nombre"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/edadpet_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/bebas"
                android:hint="@string/edad"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/descpetpet_activity"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/bebas"
                android:hint="@string/descrip"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/bebas"
                android:gravity=""
                android:text="@string/contacto"
                android:textColor="#000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/nombreper_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/bebas"
                android:hint="@string/nombre"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/direccionper_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/bebas"
                android:hint="@string/direccion"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/emailper_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/bebas"
                android:hint="@string/email"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ubicacionper_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/bebas"
                android:hint="@string/ciudad_departamento"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/numeroper_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/bebas"
                android:hint="@string/numero_telefono"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="410dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/whatsapp"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/bordes_redondos"
                    android:fontFamily="@font/bebas"
                    android:text="Whatsapp" />

                <Button
                    android:id="@+id/gmail"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bordes_redondos"
                    android:drawableStart="@drawable/petname"
                    android:fontFamily="@font/bebas"
                    android:text="Gmail" />
            </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>
</RelativeLayout>