<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Add">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/inscrbirse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="Inscribirse"
            app:srcCompat="@drawable/plus" />

        <ImageButton
            android:id="@+id/perro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/dog" />

        <ImageButton
            android:id="@+id/gato"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/cat" />

        <ImageButton
            android:id="@+id/veterinario"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/vet" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DFE4E8">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DFE4E8"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:text="@string/datos_mascota"
                android:textColor="#000" />
            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:hint="@string/nombre"
                app:boxBackgroundMode="outline"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/namepet"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:hint="@string/edad"
                app:boxBackgroundMode="outline"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/agepet"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:hint="@string/descrip"
                app:boxBackgroundMode="outline"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descpet"
                    android:layout_width="260dp"
                    android:layout_height="80dp"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="20dp"
                android:text="@string/datos_responsable"
                android:textColor="#000" />

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:hint="@string/nombre"
                app:boxBackgroundMode="outline"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombre"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:hint="@string/direccion"
                app:boxBackgroundMode="outline"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/direccion"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                app:boxBackgroundMode="outline"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:hint="@string/ciudad_departamento"
                app:boxBackgroundMode="outline"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ciudad"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btninscribirse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:background="#49A3EC"
                android:text="@string/inscribir" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>